--- a/AndroidScout/app/src/main/AndroidManifest.xml
+++ b/AndroidScout/app/src/main/AndroidManifest.xml
@@ -4,9 +4,8 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -22,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConnectAndSendActivity"></activity>
+        <activity android:name=".ConnectAndSendActivity" />
+        <activity android:name=".Data_Manager_Activity"></activity>
     </application>
 
 </manifest>
