--- a/AndroidScout/app/build.gradle
+++ b/AndroidScout/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.tribetech4485.androidscout"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "0.1.2-alpha"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
