--- a/AndroidScout/app/build.gradle
+++ b/AndroidScout/app/build.gradle
@@ -2,13 +2,15 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
+    //buildToolsVersion "26.0.2"
     //buildToolsVersion '26.0.2'
+
     defaultConfig {
         applicationId "com.tribetech4485.androidscout"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 6
-        versionName "0.1.5-alpha"
+        versionCode 7
+        versionName "0.2.0-alpha"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
