--- a/AndroidScout/app/build.gradle
+++ b/AndroidScout/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.tribetech4485.androidscout"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 7
-        versionName "0.2.0-alpha"
+        versionCode 10
+        versionName "1.0.2-beta"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
