--- a/AndroidScout/app/build.gradle
+++ b/AndroidScout/app/build.gradle
@@ -1,17 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
+    //compileSdkVersion 25
     //buildToolsVersion "26.0.2"
     //buildToolsVersion '26.0.2'
 
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '27.0.3'
     //buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.tribetech4485.androidscout"
-        minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 10
+        minSdkVersion 19
+        targetSdkVersion 26
+        versionCode 12
         versionName "1.0.2-beta"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
