--- a/AndroidScout/app/build.gradle
+++ b/AndroidScout/app/build.gradle
@@ -12,7 +12,7 @@ android {
         applicationId "com.tribetech4485.androidscout"
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode 12
+        versionCode 13
         versionName "1.0.2-beta"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -25,12 +25,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.github.travijuu:numberpicker:1.0.7'
-    testCompile 'junit:junit:4.12'
+
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.github.travijuu:numberpicker:1.0.7'
+    testImplementation 'junit:junit:4.12'
 }
